# rulka

./: -.env  .env.example  .gitignore  CHANGELOG.md  README.md  WINDOW_FOCUS_FIX.md  pyproject.toml
.cursor/commands/: doc_exp.md  run_exp.md
.cursor/rules/: experiment_documentation.md
.github/: funding.yml
.github/workflows/: docs.yml
config_files/: README.md  __init__.py  config.py  config_default.yaml  config_loader.py  config_schema.py  environment_config.py  exploration_config.py  map_cycle_config.py  memory_config.py  neural_network_config.py  performance_config.py  pretrain_bc_schema.py  pretrain_config.yaml  pretrain_config_bc.yaml  pretrain_config_simclr.yaml  pretrain_schema.py  rewards_config.py  training_config.py  user_config.py
config_files/rl/: config_default.yaml  config_test.yaml
docs/source/: conf.py  configuration_guide.rst  contributions.rst  dev_faq.rst  documentation.rst  first_training.rst  game_inputs_and_float_vector.rst  hf_dataset.rst  index.rst  installation.rst  main_objects.rst  project_structure.rst  second_training.rst  tensorboard_metrics.rst  tmnf_replays.rst  troubleshooting.rst  user_faq.rst
scripts/: analyze_batch_experiment.py  analyze_experiment.py  analyze_experiment_by_relative_time.py  analyze_pretrain_bc.py  backfill_manifest_actions.py  capture_frames_from_replays.py  capture_replays_tmnf.py  capture_replays_tmnf_validate.py  cleanup_skip_indices.py  cleanup_source_metadata.py  experiment_plot_utils.py  extract_tensorboard_data.py  filter_track_ids_custom_maptype.py  filter_track_ids_no_respawn.py  fix_replay_filenames.py  generate_experiment_plots.py  init_iqn_from_encoder.py  inspect_replay_gbx.py  launch_game_agade.sh  launch_game_pb.sh  plot_experiment_comparison.py  prepare_pretrain_data.py  pretrain_bc.py  pretrain_visual_backbone.py  setup_a01_for_bc.py  train.py  verify_float_inputs.py
scripts/dataset/: README.md  push_to_hf.py  (+1 more)
trackmania_rl/: action_vector.py  analysis_metrics.py  buffer_management.py  buffer_utilities.py  float_inputs.py  geometry.py  map_loader.py  run_to_video.py  utilities.py
(+73 files in other folders)
